[gd_scene format=3 uid="uid://dgg6fxmx7asyf"]

[ext_resource type="Script" uid="uid://bv5awqpt3v145" path="res://addons/cognite/editor/scripts/itens/context_item.gd" id="1_u3i8g"]
[ext_resource type="Texture2D" uid="uid://v4ltv3yeg71a" path="res://addons/cognite/assets/close.svg" id="3_6buxa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6buxa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6buxa"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.047058824, 0.09803922, 0.25882354, 0.44705883)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujset"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.11764706, 0.2, 0.46666667, 0.44705883)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7i2f2"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.047058824, 0.09803922, 0.25882354, 0.44705883)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvm8y"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.11764706, 0.2, 0.46666667, 0.44705883)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b4o0w"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.047058824, 0.09803922, 0.25882354, 0.44705883)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3yy8p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yy8p"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.211765, 0.239216, 0.290196, 0.588235)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="context_item" type="PanelContainer" unique_id=1385769528]
offset_right = 379.0
offset_bottom = 117.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_6buxa")
script = ExtResource("1_u3i8g")

[node name="context_folder" type="FoldableContainer" parent="." unique_id=1527841603]
layout_mode = 2
theme_override_styles/title_panel = SubResource("StyleBoxFlat_6buxa")
theme_override_styles/title_hover_panel = SubResource("StyleBoxFlat_ujset")
theme_override_styles/title_collapsed_panel = SubResource("StyleBoxFlat_7i2f2")
theme_override_styles/title_collapsed_hover_panel = SubResource("StyleBoxFlat_pvm8y")
theme_override_styles/focus = SubResource("StyleBoxFlat_b4o0w")
theme_override_styles/panel = SubResource("StyleBoxFlat_b4o0w")

[node name="VBoxContainer" type="VBoxContainer" parent="context_folder" unique_id=1695447681]
layout_mode = 2

[node name="header" type="HBoxContainer" parent="context_folder/VBoxContainer" unique_id=698806118]
layout_mode = 2

[node name="activated" type="CheckButton" parent="context_folder/VBoxContainer/header" unique_id=2095745802]
layout_mode = 2
button_pressed = true

[node name="Label" type="Label" parent="context_folder/VBoxContainer/header" unique_id=1843186358]
layout_mode = 2
text = "activated"

[node name="VSeparator" type="VSeparator" parent="context_folder/VBoxContainer/header" unique_id=993422616]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_3yy8p")

[node name="HBoxContainer" type="HBoxContainer" parent="context_folder/VBoxContainer" unique_id=780063510]
layout_mode = 2

[node name="Label" type="Label" parent="context_folder/VBoxContainer/HBoxContainer" unique_id=1004876842]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Name:"
vertical_alignment = 1

[node name="context_name" type="LineEdit" parent="context_folder/VBoxContainer/HBoxContainer" unique_id=333776998]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name:"

[node name="validate_hbox" type="HBoxContainer" parent="context_folder/VBoxContainer" unique_id=1859319743]
layout_mode = 2

[node name="Label" type="Label" parent="context_folder/VBoxContainer/validate_hbox" unique_id=1111621541]
layout_mode = 2
size_flags_horizontal = 3
text = "Validate mode:"

[node name="validate_value" type="OptionButton" parent="context_folder/VBoxContainer/validate_hbox" unique_id=1099201242]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "Any"
popup/item_0/id = 0
popup/item_1/text = "All"
popup/item_1/id = 1

[node name="show_perception_list" type="CheckButton" parent="context_folder/VBoxContainer" unique_id=1259710970]
visible = false
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_3yy8p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3yy8p")
theme_override_styles/hover = SubResource("StyleBoxFlat_3yy8p")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_3yy8p")
theme_override_styles/disabled = SubResource("StyleBoxFlat_3yy8p")
theme_override_styles/focus = SubResource("StyleBoxFlat_3yy8p")
button_pressed = true
text = "Show Perpections"
icon_alignment = 1
expand_icon = true

[node name="PanelContainer" type="PanelContainer" parent="context_folder/VBoxContainer" unique_id=985340057]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3yy8p")

[node name="perception_list" type="VBoxContainer" parent="context_folder/VBoxContainer/PanelContainer" unique_id=559274045]
layout_mode = 2
size_flags_horizontal = 3

[node name="create_perception_item" type="MenuButton" parent="context_folder/VBoxContainer/PanelContainer/perception_list" unique_id=1405057076]
layout_mode = 2
size_flags_vertical = 0
text = "Add Perception"
item_count = 1
popup/item_0/text = "Perceptions"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true

[node name="delete" type="Button" parent="." unique_id=1017345511]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0.57254905)
icon = ExtResource("3_6buxa")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="toggled" from="context_folder/VBoxContainer/header/activated" to="." method="_on_activated_toggled"]
[connection signal="text_changed" from="context_folder/VBoxContainer/HBoxContainer/context_name" to="." method="_on_context_name_text_changed"]
[connection signal="item_selected" from="context_folder/VBoxContainer/validate_hbox/validate_value" to="." method="_on_validate_value_item_selected"]
[connection signal="toggled" from="context_folder/VBoxContainer/show_perception_list" to="." method="_on_show_perception_list_toggled"]
[connection signal="about_to_popup" from="context_folder/VBoxContainer/PanelContainer/perception_list/create_perception_item" to="." method="_on_create_perception_item_about_to_popup"]
[connection signal="pressed" from="delete" to="." method="_on_delete_pressed"]
